fix(material/slide-toggle): no outline when selected in high contrast mode
Fixes that the M3 slide toggle didn't have an outline when it's selected in high contrast mode.

--- a/src/material/core/tokens/m2/mat/_switch.scss
+++ b/src/material/core/tokens/m2/mat/_switch.scss
@@ -38,6 +38,7 @@ $prefix: (mat, switch);
     track-outline-width: 1px,
     track-outline-color: transparent,
     selected-track-outline-width: 1px,
+    selected-track-outline-color: transparent,
     disabled-unselected-track-outline-width: 1px,
     disabled-unselected-track-outline-color: transparent,
   );
